WIP : Add configs to deploy API in docker compose. TODO: Networking to call API does not work yet

--- a/backend/dockerfile_debugger
+++ b/backend/dockerfile_debugger
@@ -6,6 +6,7 @@ FROM python:3.10-alpine
 
 WORKDIR /app
 COPY ./deploy.py /app/
+COPY ./deploy_utils.py /app/
 COPY ./lambdas /app/lambdas/
 COPY ./config /app/config/
 COPY ./test /app/test/
