--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "@testing-library/react": "^14.2.1",
     "coveralls": "^3.1.1",
     "react-test-renderer": "^18.2.0"
+  },
+  "dependencies": {
+    "@aws-amplify/ui-react": "^6.1.6",
+    "aws-amplify": "^6.0.20"
   }
 }
