--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-aws-exports.js
-awsconfiguration.json
+#aws-exports.js
+#awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
 amplify-build-config.json
