--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
-    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.20",
-    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "react-swipeable-views": "^0.14.0",
-    "react-swipeable-views-utils": "^0.14.0",
-    "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0",
-    "sass": "^1.71.1",
+    "sass": "^1.72.0",
     "web-vitals": "^3.5.2",
-    "yup": "^1.4.0"
+    "react-multi-carousel": "^2.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
