--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -34,9 +34,9 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-src/config/aws-exports.js
+# src/config/aws-exports.js
 awsconfiguration.json
-amplifyconfiguration.json
+# amplifyconfiguration.json
 amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
