move django containerization to main docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,44 @@ services:
     networks:
       - backend
 
+  django:
+    container_name: "djangoproject"
+    build: ./python/djangoproject
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgresdb_service
+    command: >
+      bash -c "python manage.py wait_for_db &&
+      python manage.py makemigrations  --noinput &&
+      python manage.py migrate --noinput &&
+      python manage.py initadmin &&
+      python manage.py runserver 0.0.0.0:8000"
+    environment:
+      POSTGRES_USER: "admin"
+      POSTGRES_PASSWORD: "admin"
+    volumes:
+      - ./python/djangoproject:/app
+    networks:
+      - backend
+
+  postgresdb_service:
+    image: postgres:latest
+    container_name: "postgresdb_container"
+    ports:
+      - "5400:5432"
+    environment:
+      POSTGRES_DB: "postgresdb"
+      POSTGRES_USER: "admin"
+      POSTGRES_PASSWORD: "admin"
+    networks:
+      - backend
+    #volumes:
+    #  - dbvolume:/var/lib/postgresql/data
+
+#volumes:
+#  dbvolume:
+
 networks:
   backend:
     external: false
