--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - APIG_TAG_ID=API_TAG_ID
       - APIG_TAG=apig_shopprofiles
       - APIG_STAGE=PROD
+      - AM_I_IN_A_DOCKER_CONTAINER=True
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
