--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - AWS_ENDPOINT_URL=http://localstack:4566 # host localstack must match the name of the service which runs localstack
       - AWS_ACCESS_KEY_ID=fakecred # Sometimes boto3 needs credentials
       - AWS_SECRET_ACCESS_KEY=fakecred
+      - AM_I_IN_A_DOCKER_CONTAINER=True
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
