--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3"
 services:
 
-  frontend:
-    container_name: "frontend"
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    #environment:
-    #  - REACT_APP_API_URL=http://localhost:4566
-    volumes:
-      - "./frontend/public:/app/public"
-      - "./frontend/src:/app/src"
+  # frontend:
+  #   container_name: "frontend"
+  #   build: ./frontend
+  #   ports:
+  #     - "3000:3000"
+  #   #environment:
+  #   #  - REACT_APP_API_URL=http://localhost:4566
+  #   volumes:
+  #     - "./frontend/public:/app/public"
+  #     - "./frontend/src:/app/src"
 
   localstack:
     container_name: "localstack"
@@ -76,40 +76,40 @@ services:
     networks:
       - backend
 
-  django:
-    container_name: "djangoproject"
-    build: ./python/djangoproject
-    ports:
-      - "8000:8000"
-    depends_on:
-      - postgresdb_service
-    command: >
-      bash -c "python manage.py wait_for_db &&
-      python manage.py makemigrations  --noinput &&
-      python manage.py migrate --noinput &&
-      python manage.py initadmin &&
-      python manage.py runserver 0.0.0.0:8000"
-    environment:
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "admin"
-    volumes:
-      - ./python/djangoproject:/app
-    networks:
-      - backend
+  # django:
+  #   container_name: "djangoproject"
+  #   build: ./python/djangoproject
+  #   ports:
+  #     - "8000:8000"
+  #   depends_on:
+  #     - postgresdb_service
+  #   command: >
+  #     bash -c "python manage.py wait_for_db &&
+  #     python manage.py makemigrations  --noinput &&
+  #     python manage.py migrate --noinput &&
+  #     python manage.py initadmin &&
+  #     python manage.py runserver 0.0.0.0:8000"
+  #   environment:
+  #     POSTGRES_USER: "admin"
+  #     POSTGRES_PASSWORD: "admin"
+  #   volumes:
+  #     - ./python/djangoproject:/app
+  #   networks:
+  #     - backend
 
-  postgresdb_service:
-    image: postgres:latest
-    container_name: "postgresdb_container"
-    ports:
-      - "5400:5432"
-    environment:
-      POSTGRES_DB: "postgresdb"
-      POSTGRES_USER: "admin"
-      POSTGRES_PASSWORD: "admin"
-    networks:
-      - backend
-    #volumes:
-    #  - dbvolume:/var/lib/postgresql/data
+  # postgresdb_service:
+  #   image: postgres:latest
+  #   container_name: "postgresdb_container"
+  #   ports:
+  #     - "5400:5432"
+  #   environment:
+  #     POSTGRES_DB: "postgresdb"
+  #     POSTGRES_USER: "admin"
+  #     POSTGRES_PASSWORD: "admin"
+  #   networks:
+  #     - backend
+  #   #volumes:
+  #   #  - dbvolume:/var/lib/postgresql/data
 
 #volumes:
 #  dbvolume:
