--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
+      - shopprofile
     networks:
       - backend
 
