--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "react-redux": "^8.0.0",
+    "@reduxjs/toolkit": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
