--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,11 +57,10 @@ services:
     networks:
       - backend
   
-  template-microservice:
-    container_name: "template-microservice"
+  cart:
+    container_name: "cart"
     build:
-      context: ./template-microservice
-      dockerfile: dockerfile
+      dockerfile: cart/dockerfile
       no_cache: true
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
@@ -81,11 +80,10 @@ services:
     networks:
       - backend
   
-  template-microservice-debugger:
-    container_name: "template-microservice-debugger"
+  cart-debugger:
+    container_name: "cart-debugger"
     build:
-      context: ./template-microservice
-      dockerfile: dockerfile_debugger
+      dockerfile: cart/dockerfile_debugger
       no_cache: true
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
@@ -104,6 +102,54 @@ services:
       - apig-main
     networks:
       - backend
+  
+  # template-microservice:
+  #   container_name: "template-microservice"
+  #   build:
+  #     context: ./template-microservice
+  #     dockerfile: dockerfile
+  #     no_cache: true
+  #   environment:
+  #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+  #     - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
+  #     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
+  #     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
+  #     - APIG_TAG_ID=${APIG_TAG_ID}
+  #     - APIG_TAG=${APIG_TAG}
+  #     - APIG_STAGE=${APIG_STAGE}
+  #     - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+  #     - APIG_WAIT=${APIG_WAIT}
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   depends_on:
+  #     - localstack
+  #     - apig-main
+  #   networks:
+  #     - backend
+  
+  # template-microservice-debugger:
+  #   container_name: "template-microservice-debugger"
+  #   build:
+  #     context: ./template-microservice
+  #     dockerfile: dockerfile_debugger
+  #     no_cache: true
+  #   environment:
+  #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+  #     - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
+  #     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
+  #     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
+  #     - APIG_TAG_ID=${APIG_TAG_ID}
+  #     - APIG_TAG=${APIG_TAG}
+  #     - APIG_STAGE=${APIG_STAGE}
+  #     - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+  #     - APIG_WAIT=${APIG_WAIT}
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   depends_on:
+  #     - localstack
+  #     - apig-main
+  #   networks:
+  #     - backend
 
   # django:
   #   container_name: "djangoproject"
