--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     build: ./frontend
     ports:
       - "3000:3000"
-    #environment:
+    environment:
+      - WDS_SOCKET_HOST=127.0.0.1 
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
     #  - REACT_APP_API_URL=http://localhost:4566
     volumes:
       - "./frontend/public:/app/public"
