--- a/template-microservice/dockerfile
+++ b/template-microservice/dockerfile
@@ -18,6 +18,12 @@ WORKDIR /app
 # RUN apk add curl
 # RUN apk add jq
 
+# Add python compilers to install wheels, don't ask why, but it works
+RUN apk add python3-dev
+RUN apk add gcc
+RUN apk add libc-dev
+RUN apk add libffi-dev
+
 # Install python dependencies
 RUN pip install -r requirements.txt
 
