--- a/template-microservice/dockerfile_debugger
+++ b/template-microservice/dockerfile_debugger
@@ -17,11 +17,17 @@ WORKDIR /app/lambdas
 RUN find . -type f -name "*.zip" -exec rm {} \;
 WORKDIR /app
 
-# # Install packages if needed
+# Install packages if needed
 RUN apk update && apk upgrade
 # RUN apk add zip
 RUN apk add curl
 # RUN apk add jq
+
+# Add python compilers to install wheels, don't ask why, but it works
+RUN apk add python3-dev
+RUN apk add gcc
+RUN apk add libc-dev
+RUN apk add libffi-dev
 
 # Install python dependencies
 RUN pip install -r requirements.txt
