--- a/template-microservice/dockerfile
+++ b/template-microservice/dockerfile
@@ -2,11 +2,11 @@
 FROM python:3.10-alpine
 
 WORKDIR /app
-COPY ./deploy.py /app/
-COPY ./deploy_utils.py /app/
-COPY ./lambdas /app/lambdas/
-COPY ./config /app/config/
-COPY ./requirements.txt /app/
+COPY ./template-microservice/deploy.py /app/
+COPY ./template-microservice/deploy_utils.py /app/
+COPY ./template-microservice/lambdas /app/lambdas/
+COPY ./template-microservice/config /app/config/
+COPY ./template-microservice/requirements.txt /app/
 
 # Remove all zip files from the lambdas folder
 WORKDIR /app/lambdas
