--- a/cart/dockerfile
+++ b/cart/dockerfile
@@ -2,8 +2,11 @@
 FROM python:3.10-alpine
 
 WORKDIR /app
-COPY ./cart/deploy.py /app/
+
 COPY ./template-microservice/deploy_utils.py /app/
+COPY ./template-microservice/lambdas /app/lambdas/
+
+COPY ./cart/deploy.py /app/
 COPY ./cart/lambdas /app/lambdas/
 COPY ./cart/config /app/config/
 COPY ./cart/requirements.txt /app/
@@ -12,6 +15,12 @@ COPY ./cart/requirements.txt /app/
 WORKDIR /app/lambdas
 RUN find . -type f -name "*.zip" -exec rm {} \;
 WORKDIR /app
+
+# Add python compilers to install wheels, don't ask why, but it works
+RUN apk add python3-dev
+RUN apk add gcc
+RUN apk add libc-dev
+RUN apk add libffi-dev
 
 # Install python dependencies
 RUN pip install -r requirements.txt
