--- a/cart/dockerfile_debugger
+++ b/cart/dockerfile_debugger
@@ -5,8 +5,11 @@
 FROM python:3.10-alpine
 
 WORKDIR /app
-COPY ./cart/deploy.py /app/
+
 COPY ./template-microservice/deploy_utils.py /app/
+COPY ./template-microservice/lambdas /app/lambdas/
+
+COPY ./cart/deploy.py /app/
 COPY ./cart/lambdas /app/lambdas/
 COPY ./cart/config /app/config/
 COPY ./cart/requirements.txt /app/
@@ -23,6 +26,12 @@ RUN apk update && apk upgrade
 # RUN apk add zip
 RUN apk add curl
 # RUN apk add jq
+
+# Add python compilers to install wheels, don't ask why, but it works
+RUN apk add python3-dev
+RUN apk add gcc
+RUN apk add libc-dev
+RUN apk add libffi-dev
 
 # Install python dependencies
 RUN pip install -r requirements.txt
