--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,7 @@ services:
   cart:
     container_name: "cart"
     build:
-      context: ./template-microservice
-      dockerfile: dockerfile
+      dockerfile: ./cart/dockerfile
       no_cache: true
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
@@ -106,8 +105,7 @@ services:
   # template-microservice:
   #   container_name: "template-microservice"
   #   build:
-  #     context: ./template-microservice
-  #     dockerfile: dockerfile
+  #     dockerfile: ./template-microservice/dockerfile
   #     no_cache: true
   #   environment:
   #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
@@ -130,8 +128,7 @@ services:
   # template-microservice-debugger:
   #   container_name: "template-microservice-debugger"
   #   build:
-  #     context: ./template-microservice
-  #     dockerfile: dockerfile_debugger
+  #     dockerfile: ./template-microservice/dockerfile_debugger
   #     no_cache: true
   #   environment:
   #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
