cart : dockerfile, only copy options_default from template

--- a/cart/dockerfile
+++ b/cart/dockerfile
@@ -3,13 +3,15 @@ FROM python:3.10-alpine
 
 WORKDIR /app
 
-COPY ./template-microservice/deploy_utils.py /app/
-COPY ./template-microservice/lambdas /app/lambdas/
-
 COPY ./cart/deploy.py /app/
 COPY ./cart/lambdas /app/lambdas/
 COPY ./cart/config /app/config/
 COPY ./cart/requirements.txt /app/
+
+COPY ./template-microservice/deploy_utils.py /app/
+# Copy the OPTIONS default handler from the template
+RUN mkdir lambdas/options_default
+COPY ./template-microservice/lambdas/options_default/handler.py /app/lambdas/options_default/
 
 # Remove all zip files from the lambdas folder
 WORKDIR /app/lambdas
