Move deploy.py to template, remove from individual microservices
Adjust dockefiles in microservices
product-microservice : Set build context to root to conform to template standard

--- a/cart/dockerfile_debugger
+++ b/cart/dockerfile_debugger
@@ -6,13 +6,14 @@ FROM python:3.10-alpine
 
 WORKDIR /app
 
-COPY ./cart/deploy.py /app/
 COPY ./cart/lambdas /app/lambdas/
 COPY ./cart/config /app/config/
 COPY ./cart/requirements.txt /app/
 COPY ./cart/test /app/test
 
+# Copy from the template
 COPY ./template-microservice/deploy_utils.py /app/
+COPY ./template-microservice/deploy.py /app/
 # Copy the OPTIONS default handler from the template
 RUN mkdir lambdas/options_default
 COPY ./template-microservice/lambdas/options_default/handler.py /app/lambdas/options_default/
