--- a/cart/dockerfile
+++ b/cart/dockerfile
@@ -3,12 +3,13 @@ FROM python:3.10-alpine
 
 WORKDIR /app
 
-COPY ./cart/deploy.py /app/
 COPY ./cart/lambdas /app/lambdas/
 COPY ./cart/config /app/config/
 COPY ./cart/requirements.txt /app/
 
+# Copy from the template
 COPY ./template-microservice/deploy_utils.py /app/
+COPY ./template-microservice/deploy.py /app/
 # Copy the OPTIONS default handler from the template
 RUN mkdir lambdas/options_default
 COPY ./template-microservice/lambdas/options_default/handler.py /app/lambdas/options_default/
