--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,8 +134,7 @@ services:
   product-microservice:
     container_name: "product-microservice"
     build:
-      context: ./product-microservice
-      dockerfile: dockerfile
+      dockerfile: ./product-microservice/dockerfile
       no_cache: true
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
@@ -152,26 +151,31 @@ services:
     depends_on:
       - localstack
       - apig-main
+      - apig-id-share
     networks:
       - backend
-  
+
   product-microservice-debugger:
     container_name: "product-microservice-debugger"
     build:
-      context: ./product-microservice
-      dockerfile: dockerfile_debugger
+      dockerfile: ./product-microservice/dockerfile_debugger
       no_cache: true
     environment:
       - AWS_DEFAULT_REGION=us-east-1
       - AWS_ENDPOINT_URL=http://localstack:4566 # host localstack must match the name of the service which runs localstack
       - AWS_ACCESS_KEY_ID=fakecred # Sometimes boto3 needs credentials 
       - AWS_SECRET_ACCESS_KEY=fakecred
-      - AM_I_IN_A_DOCKER_CONTAINER=True
+      - APIG_TAG_ID=${APIG_TAG_ID}
+      - APIG_TAG=${APIG_TAG}
+      - APIG_STAGE=${APIG_STAGE}
+      - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+      - APIG_WAIT=${APIG_WAIT}
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
       - apig-main
+      - apig-id-share
     networks:
       - backend
 
