--- a/product-microservice/dockerfile_debugger
+++ b/product-microservice/dockerfile_debugger
@@ -24,7 +24,8 @@ RUN find . -type f -name "*.zip" -exec rm {} \;
 WORKDIR /app
 
 # # Install packages if needed
-RUN apk update && apk upgrade
+#RUN apk update && apk upgrade
+RUN apk update
 # RUN apk add zip
 RUN apk add curl
 # RUN apk add jq
