Add global OPTIONS lambda handler, move it to own service. Deploy waits for this lambda function to be present

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ APIG_TAG_ID="API_TAG_ID"
 APIG_TAG="apig-main"
 APIG_STAGE="PROD"
 APIG_WAIT="300"
+OPTIONS_LAMBDA_FUNCTION="options_lambda_function"
