--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,25 @@ services:
     networks:
       - backend
 
+  options_lambda_function:
+    container_name: "options_lambda_function"
+    build:
+      dockerfile: ./options_lambda_function/dockerfile
+      no_cache: true
+    environment:
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
+      - APIG_WAIT=${APIG_WAIT}
+      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    depends_on:
+      - localstack
+    networks:
+      - backend
+
   cart:
     container_name: "cart"
     build:
@@ -102,12 +121,14 @@ services:
       - APIG_STAGE=${APIG_STAGE}
       - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
       - APIG_WAIT=${APIG_WAIT}
+      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
       - apig-main
       - apig-id-share
+      - options_lambda_function
     networks:
       - backend
 
@@ -126,12 +147,14 @@ services:
       - APIG_STAGE=${APIG_STAGE}
       - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
       - APIG_WAIT=${APIG_WAIT}
+      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
       - apig-main
       - apig-id-share
+      - options_lambda_function
     networks:
       - backend
 
@@ -150,12 +173,14 @@ services:
       - APIG_STAGE=${APIG_STAGE}
       - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
       - APIG_WAIT=${APIG_WAIT}
+      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
       - apig-main
       - apig-id-share
+      - options_lambda_function
     networks:
       - backend
 
@@ -174,12 +199,14 @@ services:
       - APIG_STAGE=${APIG_STAGE}
       - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
       - APIG_WAIT=${APIG_WAIT}
+      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - localstack
       - apig-main
       - apig-id-share
+      - options_lambda_function
     networks:
       - backend
 
