--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "79-Testing" ]
 
 jobs:
   build:
