--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
-    "react-redux": "^9.1.0",
+    "react-redux": "^8.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.72.0",
-    "web-vitals": "^3.5.2",
-    "react-redux": "^8.0.0",
-    "@reduxjs/toolkit": "^1.7.1"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +51,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
+    "jest": "^29.7.0",
     "webpack-cli": "^5.1.4"
   },
   "browser": {
@@ -63,6 +62,8 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/src/__mocks__/styleMock.js"
-    }
+    },
+    "collectCoverage": true,
+    "coverageDirectory": "coverage"
   }
 }
