--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -31,7 +31,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies
-      run: npm ci
+      run: npm i
       
     - name: Run tests
       run: npm test
