--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -1,13 +1,12 @@
 # This workflow will do a clean installation of node dependencies, build the source code and run tests with node v18
 
-
 name: JS - Jest Test
 
 on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [ "main", "79-Testing" ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -19,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: ["14.x", "16.x", "18.x"]
 
     steps:
     - name: Checkout Code
