--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults: 
       run:
-        working-directory: frontend
+        working-directory: ./frontend
 
     strategy:
       matrix:
@@ -33,7 +33,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies
-      run: npm ci
+      run: 
+        npm ci
       
     - name: Run tests
       run: npm test
