Move tests to tests folder, update pytest.ini, add Github Action
Rename product-microservice to manual_test

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,5 @@
 minversion = 8.0
 addopts = -ra -q
 # TODO: Specify paths to tests after restructuring of the backend
-; testpaths =
-;     cart/tests
+testpaths =
+    tests
