--- a/.github/workflows/backend_tests.yml
+++ b/.github/workflows/backend_tests.yml
@@ -37,12 +37,12 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: py-coverage-data
-        path: PYTHON/py/.qodana/code-coverage
+        path: .qodana/code-coverage
 
     - name: Qodana Scan
       uses: JetBrains/qodana-action@main
       env:
-        QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_PYTHON }}
+        QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
       with:
-        args: "-i,PYTHON/py,--linter,jetbrains/qodana-python:2023.3-eap"
+        args: "-i,--linter,jetbrains/qodana-python:2023.3-eap"
         pr-mode: false
