--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,4 +1,6 @@
 version: "1.0"
+profile:
+  name: "qodana.recommended"
 linter: jetbrains/qodana-python-community:2023.3
 exclude:
   - name: PyShadowingNamesInspection
