WIP : Qodana set up code coverage

--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -50,3 +50,4 @@ jobs:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
           args: --baseline,qodana.sarif.json
+          upload-result: true
